// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer - collapsed 1`] = `
Array [
  <div
    className="drawer"
    style={
      Object {
        "maxHeight": 0,
      }
    }
  >
    <div
      className="drawer__scroller"
    >
      <div
        className="drawer__contents"
      >
        <DrawerContents
          activeTab="What is this"
        />
      </div>
    </div>
  </div>,
  <div
    className="drawer__overlay"
    onClick={[MockFunction]}
  />,
]
`;

exports[`Drawer - expanded 1`] = `
Array [
  <div
    className="drawer drawer--visible"
    style={
      Object {
        "maxHeight": 652.8,
      }
    }
  >
    <div
      className="drawer__scroller"
    >
      <div
        className="drawer__contents"
      >
        <DrawerContents
          activeTab="What is this"
        />
      </div>
    </div>
  </div>,
  <div
    className="drawer__overlay drawer__overlay--visible"
    onClick={[MockFunction]}
  />,
]
`;
